<resources>
    <string name="app_name">MoloSecondAssignment</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign-up</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">PASSWORD</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="e_mail">E-MAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="example_name">Example Name</string>
    <string name="example_gmail">example@gmail.com</string>
    <string name="address">ADDRESS</string>
    <string name="postcode">POSTCODE</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_category">Add Category</string>
    <string name="enter_the_category">Enter the Category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="select_category">SELECT CATEGORY</string>
    <string name="category_image">Category Image</string>
    <string name="select_image">Select Image</string>
    <string name="edit_category">EDIT CATEGORY</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="product_description">Product Description: </string>
    <string name="product_price">Product Price</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="edit_product">EDIT PRODUCT</string>
    <string name="all_products">ALL PRODUCTS</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="filtered_products">FILTERED PRODUCTS</string>
    <string name="check_out">CHECK-OUT</string>
    <string name="all_users">ALL USERS</string>
    <string name="all_orders">ALL ORDERS</string>
    <string name="without_taxes">(without taxes)</string>
    <string name="change_password">Change password</string>
    <string name="view_profile">View Profile</string>
    <string name="view_all_orders">View All Orders</string>
    <string name="user_s_email">User\'s Email</string>
    <string name="johndoe_example_com">johndoe@example.com</string>
    <string name="bio">Bio:</string>
    <string name="segilola_mololuwa">Segilola Mololuwa</string>
    <string name="update_information">UPDATE INFORMATION</string>
    <string name="users_name">Users name</string>
    <string name="user_s_address">User\'s Address</string>
    <string name="user_s_postcode">User\'s Postcode</string>
    <string name="product_retail_price">Product Retail Price</string>
    <string name="user_s_hobbies">User\'s Hobbies</string>
    <string name="product_image">Product Image</string>
    <string name="user_s_image">User\'s Image</string>
    <string name="share_a_little_something_about_yourself_eg_hobbies">Share a little something about yourself eg hobbies</string>
    <string name="user_s_number">User\'s Number</string>
    <string name="_1000_0">£1000.0</string>
    <string name="product_title">Product Title</string>
    <string name="buy_now">BUY NOW</string>
    <string name="name_address">Name, Address</string>
    <string name="dispatch_to">Dispatch to:</string>
</resources>