<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white_gradient"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout"
        android:padding="10dp">

        <ImageView
            android:id="@+id/addProductBackButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="1dp"
            android:text="EDIT USER"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/users_name" />

        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="102"
            android:inputType="textPersonName"
            android:hint="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_s_email" />

        <EditText
            android:id="@+id/userEmailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="102"
            android:inputType="textEmailAddress"
            android:hint="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_s_address" />

        <EditText
            android:id="@+id/usersAddressEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint=""
            android:ems="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_s_postcode" />

        <EditText
            android:id="@+id/usersPostcodeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint=""
            android:ems="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bio" />

        <EditText
            android:id="@+id/usersBioEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_a_little_something_about_yourself_eg_hobbies" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/user_s_number" />

        <EditText
            android:id="@+id/usersNumberEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="User's Password" />

        <EditText
            android:id="@+id/usersPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/edit_password_checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Show Password" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_s_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectUserImageButtonEdit"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/second_gray_border"
                android:text="@string/select_image" />

            <ImageView
                android:id="@+id/editUserImageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_marginTop="15dp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:background="@drawable/second_gray_border"
            android:text="@string/update_information"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>