<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/productImageView"
                android:layout_marginStart="95dp"
                android:text="+"
                android:background="@drawable/second_gray_border"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productImageView"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:text="0" />

            <Button
                android:id="@+id/subtractButton"
                android:layout_below="@+id/productImageView"
                android:background="@drawable/second_gray_border"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:text="-"
                android:layout_marginBottom="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/productNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_toRightOf="@id/productImageView"
                android:text="@string/product_name" />

            <TextView
                android:id="@+id/productPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_below="@+id/productNameTextView"
                android:layout_toEndOf="@id/productImageView"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:text="@string/product_price" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/addButton"
                android:layout_alignTop="@id/addButton"
                android:background="@drawable/second_gray_border"
                android:text="@string/delete" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
